2008-10-22 Maximilien Cuony
    * 0.6.2 packed, and uploaded to the server !
    * Adding Darvin files

2008-10-22 Maximilien Cuony
    * FS#138
    * Moving ipc to rights folders
    * FS#137
    * FS#135 (almost)
    * Adding x86_64 libs

2008-10-17 Maximilien Cuony
    * 0.6.1 packed, and uploaded to the server !
    * 0.6 packed, and uploaded to the server !

2008-10-11 Maximilien Cuony
    * Cleaning code.

2008-10-10 Maximilien Cuony
    * Removed all old system
    * Using ipc and removing old system in progress.

2008-09-29 Maximilien Cuony
    * 0.5.2 packed, and uploaded to the server !
    * Fix a problem with hu locate
    * FS#118
    * FS#116

2008-09-29 Maximilien Cuony
    * Fix problem with gmail

2008-09-08 Maximilien Cuony
    * FS#96
    * FS#99
    * FS#97
    * FS#109
    * FS#102, FS#107

2008-07-14 Maximilien Cuony
    * 0.5.1 packed, and uploaded to the server !
    * Locates updated

2008-07-11 Maximilien Cuony
    * FS#75
    * XpCom disabled.
    * FS#91
    * New locates (hu and no)
    * New decrypt comportement (first try widout pass)
    * FS#70
    * FS#84

2008-07-02 Maximilien Cuony
    * Fixed problem with google app for domains (#88 and #83)
    * FS#79
    * FS#82
    * Patching inline with a patch from Ryan Patterson

2008-07-02 Maximilien Cuony
    * FS#78
    * 0.5 packed, and uploaded to the server !

2008-07-01 Maximilien Cuony
    * Some final edits
    * Autosave working agin

2008-06-29 Maximilien Cuony
    * Api working

2008-06-28 Maximilien Cuony
    * Making xpcom realy working
    * Updating doc
    * Updating locates
    * Version number set to 0.5BETA

2008-06-26 Maximilien Cuony
    * Url with numbers for google apps
    * xpcom on windows seem ok.
    * Debug code

2008-06-25 Maximilien Cuony
    * Xpcom on linux implemented

2008-06-17 Maximilien Cuony
    * Patching gpgAuh

2008-06-16  Maximilien Cuony
    * FS#17

2008-06-14  Maximilien Cuony
    * Fixed export problem
    * Patching gpgAuth
